Refactor to add LocationInfo and update tests